# siamesedb

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README.tpl
.github/workflows/: test-macos.yml  test-ubuntu.yml  test-windows.yml
fixtures/: test-fruits.txt  test-procs.txt
src/: check_main.rs  lib.rs  memdb.rs  test_main.rs  test_main2.rs  test_main3.rs  test_main4.rs  test_main5.rs  test_main6.rs
src/filedb/: buf.rs  dat.rs  idx.rs  kc.rs  leb128.rs  mod.rs  rw.rs  sqlvli.rs  unu.rs  v64.rs  varint.rs  vfile.rs
src/filedb/dbmap/: bytes.rs  kt_bytes.rs  kt_dbbytes.rs  kt_dbint.rs  kt_dbstring.rs  kt_string.rs  kt_u64.rs  mod.rs
src/filedb/inner/: buf.rs  dat.rs  dblist.rs  dbmap.rs  dbxxx.rs  htx.rs  idx.rs  kc.rs  kc2.rs  key.rs  mod.rs  nc.rs  offidx.rs  piece.rs  rc.rs  semtype.rs  tr.rs  unu.rs  val.rs  vfile.rs  vu64.rs  vu64_buf.rs  vu64_io.rs
src/filedb/vint64/: mod.rs  signed.rs  vint64.rs
tests/: debug.rs  test.rs  test2.rs  test_iter.rs  test_max.rs
xtask/src/: shape_benchmark_results.rs
