[package]
name = "siamesedb"
version = "0.1.10"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2018"
description = "The simple local key-value store."
keywords = ["key-value", "store", "database", "embedded-database"]
categories = ["database"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/aki-akaguma/siamesedb"

[[bin]]
name = "test_main"
path = "src/test_main.rs"

[[bin]]
name = "test_main2"
path = "src/test_main2.rs"

[[bin]]
name = "test_main3"
path = "src/test_main3.rs"

[[bin]]
name = "test_main4"
path = "src/test_main4.rs"

[[bin]]
name = "test_main5"
path = "src/test_main5.rs"

[[bin]]
name = "check_main"
path = "src/check_main.rs"

[features]
default = ["vf_vu64", "key_cache", "node_cache", "record_cache", "buf_overf_rem_all"]
#default = ["vf_vu64", "key_cache", "buf_overf_rem_all"]

# for developping
vf_u32u32 = []
vf_u64u64 = []
vf_vu64 = []

buf_overf_rem_all = ["rabuf/buf_overf_rem_all"]
buf_overf_rem_half = ["rabuf/buf_overf_rem_half"]
buf_lru = ["rabuf/buf_lru"]
buf_stats = ["rabuf/buf_stats"]

key_cache = []
node_cache = []
record_cache = []

kc_lru = []
kc_lfu = []

nc_lru = []

# for test
test_large_data = []
small_node_slots = []

[dependencies]
rabuf = "0.1"
vu64 = "0.1"
#rabuf = { git = "https://github.com/aki-akaguma/rabuf" }
#vu64 = { git = "https://github.com/aki-akaguma/vu64" }
#rabuf = { path = "../rabuf" }
#vu64 = { path = "../vu64" }

[dev-dependencies]
#criterion = "0.3"

[workspace]
members = [
    "xtask",
]
