[package]
name = "siamesedb"
version = "0.1.23"
authors = ["aki <aki.akaguma@hotmail.com>"]
edition = "2021"
description = "The simple local key-value store."
keywords = ["key-value", "store", "database", "embedded-database"]
categories = ["database"]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.58.0"
repository = "https://github.com/aki-akaguma/siamesedb"

[[bin]]
name = "test_main"
path = "src/test_main.rs"

[[bin]]
name = "test_main2"
path = "src/test_main2.rs"

[[bin]]
name = "test_main3"
path = "src/test_main3.rs"

[[bin]]
name = "test_main4"
path = "src/test_main4.rs"

[[bin]]
name = "test_main5"
path = "src/test_main5.rs"

[[bin]]
name = "test_main6"
path = "src/test_main6.rs"

[[bin]]
name = "check_main"
path = "src/check_main.rs"

[features]
default = ["vf_u64u64", "node_cache", "buf_default", "vf_node_u64", "idx_straight", "idx_find_uu", "htx"]
#default = ["vf_u64u64", "node_cache", "buf_default", "vf_node_u64", "idx_straight", "idx_find_uu", "htx", "print_hits"]

#default = ["vf_vu64", "node_cache", "buf_default", "htx", "print_hits"]
#default = ["vf_u64u64", "node_cache", "buf_default", "htx", "print_hits"]
#default = ["vf_u32u32", "node_cache", "buf_default", "htx", "print_hits"]
#default = ["vf_u64u64", "node_cache", "buf_default", "htx"]

# for developping
vf_u32u32 = []
vf_u64u64 = []
vf_vu64 = []

vf_node_u32 = []
vf_node_u64 = []

buf_default = ["buf_auto_buf_size", "buf_overf_rem_all", "buf_pin_zero", "buf_hash_turbo"]

buf_auto_buf_size = ["rabuf/buf_auto_buf_size"]
buf_overf_rem_all = ["rabuf/buf_overf_rem_all"]
buf_overf_rem_half = ["rabuf/buf_overf_rem_half"]
buf_pin_zero = ["rabuf/buf_pin_zero"]
buf_hash_turbo = ["rabuf/buf_hash_turbo"]

buf_lru = ["rabuf/buf_lru"]
buf_print_hits = ["rabuf/buf_print_hits"]
buf_stats = ["rabuf/buf_stats"]

node_cache = ["oi_hash_turbo"]

#htx = []
htx = ["myhasher"]
myhasher = []

# under development
print_hits = ["nc_print_hits", "htx_print_hits", "buf_print_hits"]

oi_hash_turbo = ["oi_myhash"]
oi_myhash = []

nc_large = []
nc_lfu = []
nc_lru = []
nc_print_hits = []

htx_print_hits = []
idx_straight = []
idx_find_uu = []

tr_has_short_key = []

# for test
test_large_data = []
small_node_slots = []
buf_debug = ["rabuf/buf_debug"]
siamese_debug = []

[dependencies]
rabuf = { version = "0.1", default-features=false }
vu64 = "0.1"
#rabuf = { git = "https://github.com/aki-akaguma/rabuf" }
#vu64 = { git = "https://github.com/aki-akaguma/vu64" }
#rabuf = { path = "../rabuf", default-features=false }
#vu64 = { path = "../vu64" }

[dev-dependencies]
#criterion = "0.3"

[workspace]
members = [
    "xtask",
]
